--- a/product-detail.html
+++ b/product-detail.html
@@ -34,7 +34,7 @@
             
 
           </nav>
-          <h1 class="store-name"><a href="index .html">胖呆雜貨店</a></h1>
+          <h1 class="store-name"><a href="index.jsp">胖呆雜貨店</a></h1>
 
           <div class="nav-right">
             <a href="member.html">
